[build-system]
requires = [ "setuptools>=61.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "hypha_rpc"
version = "0.20.55"
description = "Hypha RPC client for connecting to Hypha server for data management and AI model serving"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [ "numpy", "msgpack>=1.0.2", "shortuuid>=1.0.8", "websockets>=14.0; platform_system != 'Emscripten'", "munch",]
[[project.authors]]
name = "Wei Ouyang"
email = "oeway007@gmail.com"

[project.optional-dependencies]
full = [ "aiortc; platform_system != 'Emscripten'", "zarr", "fastapi", "sse-starlette", "openai", "simpervisor", "fastmcp>=2.3.4",]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [ "hypha_rpc*",]
exclude = [ "tests*", "scripts*",]
