[build-system]
requires = [ "setuptools>=61.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "hypha_rpc"
version = "0.20.93"
description = "Hypha RPC client for connecting to Hypha server for data management and AI model serving"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [ "numpy", "msgpack>=1.0.2", "shortuuid>=1.0.8", "websockets>=15.0; platform_system != 'Emscripten'", "munch", "httpx",]
[[project.authors]]
name = "Wei Ouyang"
email = "oeway007@gmail.com"

[project.optional-dependencies]
full = [ "aiortc; platform_system != 'Emscripten'", "zarr", "fastapi", "sse-starlette", "openai", "simpervisor", "fastmcp>=2.10.6", "mcp>=1.12.0",]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [ "hypha_rpc*",]
exclude = [ "tests*", "scripts*",]
