[build-system]
requires = [ "setuptools>=61.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "hypha_rpc"
version = "0.21.30"
description = "Hypha RPC client for connecting to Hypha server for data management and AI model serving"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [ "numpy", "msgpack>=1.0.2", "shortuuid>=1.0.8", "websockets>=15.0; platform_system != 'Emscripten'", "munch", "httpx",]
[[project.authors]]
name = "Wei Ouyang"
email = "oeway007@gmail.com"

[project.optional-dependencies]
encryption = [ "PyNaCl>=1.5.0",]
full = [ "aiortc; platform_system != 'Emscripten'", "zarr", "fastapi", "sse-starlette", "openai", "simpervisor", "fastmcp>=2.10.6", "mcp>=1.12.0", "PyNaCl>=1.5.0",]
test = [ "pytest>=7.2.1", "pytest-cov>=4.0.0", "pytest-timeout>=2.1.0", "pytest-asyncio>=0.20.3", "aioboto3>=13.1.1", "jupyter>=1.0.0", "jupyter_client>=8.3.0", "redis>=5.2.0", "hypha>=0.21.51", "sse-starlette>=2.1.3", "simpervisor>=1.0.0", "uvicorn[standard]>=0.31.1", "aiortc>=1.9.0; platform_system != 'Emscripten'", "openai>=1.92.2", "fastmcp==2.11.2", "mcp==1.19.0", "PyNaCl>=1.5.0",]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [ "hypha_rpc*",]
exclude = [ "tests*", "scripts*",]
